// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationPage page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "feature1": true,
      "release_basket_ids_cookie_validation": true,
    },
    "isError": false,
    "isLoading": false,
  },
}
`;

exports[`ConfirmationPage page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "feature1": true,
      "release_basket_ids_cookie_validation": true,
    },
    "isError": false,
    "isLoading": false,
  },
}
`;

exports[`ConfirmationPage page should match the snapshot 1`] = `
<div>
  <div
    data-testid="confirmation"
  />
</div>
`;

exports[`ConfirmationPage page should match the snapshot layout 1`] = `
<div>
  <div
    data-testid="ConfirmationLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div />
    </div>
  </div>
</div>
`;
